generator/kustomize/policy1_deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitops-demo
  namespace: gitops-demo
  labels:
    app: gitops-demo
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gitops-demo
